--- a/src/app/components/form-contact/form-contact.component.html
+++ b/src/app/components/form-contact/form-contact.component.html
@@ -1,1 +1,23 @@
-<p>form-contact works!</p>
+<div class="header">
+  <h3>Coordonnées</h3>
+  <a href="#" class="edit">Edit Info</a>
+</div>
+
+<div class="grid">
+  <div class="form-group">
+    <label>Email</label>
+    <input type="text" [value]="contact.email" readonly />
+  </div>
+  <div class="form-group">
+    <label>Numéro de téléphone</label>
+    <input type="text" [value]="contact.numero" readonly />
+  </div>
+  <div class="form-group">
+    <label>Pays</label>
+    <input type="text" [value]="contact.pays" readonly />
+  </div>
+  <div class="form-group">
+    <label>Ville</label>
+    <input type="text" [value]="contact.ville" readonly />
+  </div>
+</div>
