--- a/src/app/components/form-experience/form-experience.component.html
+++ b/src/app/components/form-experience/form-experience.component.html
@@ -1,1 +1,39 @@
-<p>form-experience works!</p>
+<div class="header">
+  <h3>Experience</h3>
+  <a href="#" class="edit">Edit Info</a>
+</div>
+
+<div class="grid">
+  <div class="form-group">
+    <label>Poste</label>
+    <input type="text" [value]="experience.poste" readonly />
+  </div>
+  <div class="form-group">
+    <label>Entreprise</label>
+    <input type="text" [value]="experience.entreprise" readonly />
+  </div>
+  <div class="form-group">
+    <label>Adresse</label>
+    <input type="text" [value]="experience.adresse" readonly />
+  </div>
+  <div class="form-group">
+    <label>Intitulé de poste</label>
+    <input type="text" [value]="experience.intitulePoste" readonly />
+  </div>
+  <div class="form-group">
+    <label>Début</label>
+    <input type="text" [value]="experience.debut" readonly />
+  </div>
+  <div class="form-group">
+    <label>Fin</label>
+    <input type="text" [value]="experience.fin" [readonly]="experience.actuel" />
+  </div>
+  <div class="form-group checkbox-group">
+    <label><input type="checkbox" [checked]="experience.actuel" disabled /> Travaille actuellement ici</label>
+  </div>
+</div>
+
+<div class="form-group">
+  <label>Description</label>
+  <textarea readonly>{{ experience.description }}</textarea>
+</div>
