--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -10,19 +10,24 @@
     height: 30px;
   }
 
-  .nav-links {
-    list-style: none;
-    display: flex;
-    gap: 30px;
+.nav-links {
+  display: flex;
+  gap: 20px;
+  justify-content: flex-end;
+  padding-right: 40px;
 
-    li a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-    }
+  .nav-link {
+    background: none;
+    border: none;
+    color: white;
+    font-weight: 500;
+    font-size: 14px;
+    cursor: pointer;
 
-    .active {
-      color: #3b5bfc;
+    &:hover {
+      text-decoration: underline;
     }
   }
+}
+
 }
