--- a/src/app/components/paginated-table/paginated-table.component.html
+++ b/src/app/components/paginated-table/paginated-table.component.html
@@ -13,7 +13,7 @@
       <td><a href="{{ row.link }}" target="_blank">{{ row.nom }}</a></td>
       <td>{{ row.type }}</td>
       <td>
-        <button class="action-button">Afficher fichier candidat</button>
+<button class="action-button" (click)="showCandidat.emit()">Afficher fichier candidat</button>
         
       </td>
     </tr>
