--- a/src/app/pages/fiche-poste-list/fiche-poste-list.component.html
+++ b/src/app/pages/fiche-poste-list/fiche-poste-list.component.html
@@ -1,29 +1,41 @@
-<table class="custom-table">
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Nom du fichier</th>
-      <th>Type de fichier</th>
-      <th>Matching</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let fiche of paginatedPostes">
-      <td>{{ fiche.date }}</td>
-      <td><a href="#">{{ fiche.nom }}</a></td>
-      <td>{{ fiche.type }}</td>
-      <td>
-  <button class="action-button">afficher liste matching</button>
-</td>
-    </tr>
-  </tbody>
-</table>
 
-<div class="pagination-container">
-  <span>page {{ currentPage + 1 }} / {{ totalPages }}</span>
-  <button (click)="previousPage()" [disabled]="currentPage === 0">Previous</button>
-  <ng-container *ngFor="let i of [].constructor(totalPages); let index = index">
-    <button (click)="goToPage(index)" [class.active]="index === currentPage">{{ index + 1 }}</button>
-  </ng-container>
-  <button (click)="nextPage()" [disabled]="currentPage >= totalPages - 1">Next</button>
+
+<div *ngIf="!showMatching" style="padding: 30px">
+  <app-custom-button label="Télécharger fiche de poste" (click)="showUploadModal = true"></app-custom-button>
+  <app-custom-button label="Prompt" (click)="showPrompt = !showPrompt"></app-custom-button>
+
+  <app-upload-modal *ngIf="showUploadModal" (close)="showUploadModal = false"></app-upload-modal>
+
+  <app-prompt-input *ngIf="showPrompt"></app-prompt-input>
+
+  <table class="custom-table">
+    <thead>
+      <tr>
+        <th>Date</th>
+        <th>Nom du fichier</th>
+        <th>Type de fichier</th>
+        <th>Matching</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let fiche of fichePostes">
+        <td>{{ fiche.date }}</td>
+        <td><a href="#">{{ fiche.nom }}</a></td>
+        <td>{{ fiche.type }}</td>
+        <td>
+          <button class="action-button" (click)="showMatching = true">
+            Afficher liste matching
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
+
+<!-- 🔽 S'affiche uniquement après clic -->
+<app-matching-result-table
+  *ngIf="showMatching && !showMultiForm"
+  (showCandidat)="showMultiForm = true">
+</app-matching-result-table>
+<app-multi-step-form *ngIf="showMultiForm"></app-multi-step-form>
+
