--- a/src/app/components/upload-modal/upload-modal.component.html
+++ b/src/app/components/upload-modal/upload-modal.component.html
@@ -29,6 +29,7 @@
       </div>
     </div>
 
-    <button class="submit-btn">TÉLÉCHARGER DES FICHIERS</button>
+    <button class="submit-btn" (click)="uploadFiles()">TÉLÉCHARGER DES FICHIERS</button>
+
   </div>
 </div>
