--- a/src/app/pages/fiche-poste-list/fiche-poste-list.component.html
+++ b/src/app/pages/fiche-poste-list/fiche-poste-list.component.html
@@ -4,32 +4,34 @@
   <app-custom-button label="Télécharger fiche de poste" (click)="showUploadModal = true"></app-custom-button>
   <app-custom-button label="Prompt" (click)="showPrompt = !showPrompt"></app-custom-button>
 
-  <app-upload-modal *ngIf="showUploadModal" (close)="showUploadModal = false"></app-upload-modal>
+<app-upload-modal *ngIf="showUploadModal" mode="fiche" (close)="showUploadModal = false"></app-upload-modal>
 
   <app-prompt-input *ngIf="showPrompt"></app-prompt-input>
 
-  <table class="custom-table">
-    <thead>
-      <tr>
-        <th>Date</th>
-        <th>Nom du fichier</th>
-        <th>Type de fichier</th>
-        <th>Matching</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let fiche of fichePostes">
-        <td>{{ fiche.date }}</td>
-        <td><a href="#">{{ fiche.nom }}</a></td>
-        <td>{{ fiche.type }}</td>
-        <td>
-          <button class="action-button" (click)="showMatching = true">
-            Afficher liste matching
-          </button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+ <table class="custom-table">
+  <thead>
+    <tr>
+      <th>Date</th>
+      <th>Nom du fichier</th>
+      <th>Type de fichier</th>
+      <th>Matching</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let fiche of fichePostes">
+      <td>{{ fiche.date }}</td>
+<td><a href="#">{{ fiche.nom }}</a></td>
+<td>{{ fiche.type }}</td>
+
+      <td>
+        <button class="action-button" (click)="showMatching = true">
+          Afficher liste matching
+        </button>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
 </div>
 
 <!-- 🔽 S'affiche uniquement après clic -->
