--- a/src/app/components/upload-modal/upload-modal.component.html
+++ b/src/app/components/upload-modal/upload-modal.component.html
@@ -1,4 +1,8 @@
 <div class="overlay">
+  <div *ngIf="isLoading" class="loading-overlay">
+  <div class="spinner"></div>
+</div>
+
   <div class="modal">
     <h2>Télécharger</h2>
 
