--- a/src/app/components/upload-modal/upload-modal.component.html
+++ b/src/app/components/upload-modal/upload-modal.component.html
@@ -4,6 +4,7 @@
 </div>
 
   <div class="modal">
+    <button class="close-btn" (click)="closeModal()">×</button>
     <h2>Télécharger</h2>
 
     <div class="upload-preview" *ngIf="uploadedFiles.length > 0">
