--- a/src/app/components/upload-modal/upload-modal.component.scss
+++ b/src/app/components/upload-modal/upload-modal.component.scss
@@ -137,3 +137,35 @@
 @keyframes spin {
   to { transform: rotate(360deg); }
 }
+
+.modal {
+  position: relative; // nécessaire pour positionner la croix dedans
+  background: white;
+  padding: 2rem;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+  width: 400px;
+  max-width: 90%;
+  z-index: 10;
+  text-align: center;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px;
+  background: none;
+  border: none;
+  color: #e74c3c;
+  cursor: pointer;
+  font-weight: bold;
+  z-index: 100;
+  transition: transform 0.2s ease;
+
+  &:hover {
+    transform: scale(1.2);
+    color: #c0392b;
+  }
+}
+
