--- a/src/app/pages/multi-step-form/multi-step-form.component.html
+++ b/src/app/pages/multi-step-form/multi-step-form.component.html
@@ -1,5 +1,3 @@
-
-
 <div class="container">
   <div class="steps">
     <app-step-card
@@ -12,8 +10,16 @@
   </div>
 
   <div class="form-content">
-    <app-form-personal-info [data]="personalInfo"></app-form-personal-info>
-    <app-form-education *ngIf="selectedStepIndex === 1"></app-form-education>
+    <app-form-personal-info
+      *ngIf="selectedStepIndex === 0"
+      [data]="personalInfo">
+    </app-form-personal-info>
+
+    <app-form-education
+      *ngIf="selectedStepIndex === 1"
+      [education]="educationData">
+    </app-form-education>
+
     <app-form-experience *ngIf="selectedStepIndex === 2"></app-form-experience>
     <app-form-contact *ngIf="selectedStepIndex === 3"></app-form-contact>
     <app-form-certification *ngIf="selectedStepIndex === 4"></app-form-certification>
