--- a/src/app/components/form-contact/form-contact.component.html
+++ b/src/app/components/form-contact/form-contact.component.html
@@ -6,18 +6,18 @@
 <div class="grid">
   <div class="form-group">
     <label>Email</label>
-    <input type="text" [value]="contact.email" readonly />
+    <input type="text" [value]="data?.email" readonly />
   </div>
   <div class="form-group">
     <label>Numéro de téléphone</label>
-    <input type="text" [value]="contact.numero" readonly />
+    <input type="text" [value]="data?.phone" readonly />
   </div>
   <div class="form-group">
     <label>Pays</label>
-    <input type="text" [value]="contact.pays" readonly />
+    <input type="text" [value]="data?.pays" readonly />
   </div>
   <div class="form-group">
     <label>Ville</label>
-    <input type="text" [value]="contact.ville" readonly />
+    <input type="text" [value]="data?.ville" readonly />
   </div>
 </div>
