--- a/src/app/components/paginated-table/paginated-table.component.html
+++ b/src/app/components/paginated-table/paginated-table.component.html
@@ -23,10 +23,12 @@
 </table>
 
 <div class="pagination-container">
-  <span>page {{ currentPage + 1 }} / {{ totalPages }}</span>
-  <button (click)="previousPage()" [disabled]="currentPage === 0">Previous</button>
-  <ng-container *ngFor="let page of [].constructor(totalPages); let i = index">
-    <button (click)="goToPage(i)" [class.active]="i === currentPage">{{ i + 1 }}</button>
-  </ng-container>
-  <button (click)="nextPage()" [disabled]="currentPage >= totalPages - 1">Next</button>
+  <div class="pagination-buttons">
+    <button (click)="previousPage()" [disabled]="currentPage === 0">Précédent</button>
+    <button (click)="nextPage()" [disabled]="currentPage >= totalPages - 1">Suivant</button>
+  </div>
+  <div class="page-info">
+    Page {{ currentPage + 1 }} / {{ totalPages }}
+  </div>
 </div>
+
