--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,11 +1,10 @@
 <nav class="navbar">
   <div class="logo">
-    <img src="assets/logo.png" alt="Omnishore Logo">
+    <img src="assets/logo.png" alt="Omnishore Logo" />
   </div>
   <div class="nav-links">
-  <button class="nav-link" (click)="goTo('/cv-list')">Les CVs</button>
-  <button class="nav-link" (click)="goTo('/fiche-poste')">Fiche de poste</button>
-  <button class="nav-link" (click)="goTo('/login')">Se déconnecter</button>
-</div>
-
+    <button class="nav-link" (click)="goTo('/cv-list')">Les CVs</button>
+    <button class="nav-link" (click)="goTo('/fiche-poste')">Fiche de poste</button>
+    <button class="nav-link logout" (click)="goTo('/login')">Se déconnecter</button>
+  </div>
 </nav>
