--- a/src/app/pages/cv-list/cv-list.component.html
+++ b/src/app/pages/cv-list/cv-list.component.html
@@ -1,19 +1,33 @@
+<app-upload-modal
+  *ngIf="showUploadModal"
+  mode="cv"
+  (close)="showUploadModal = false">
+</app-upload-modal>
 
-
-  <app-upload-modal *ngIf="showUploadModal" mode="cv" (close)="showUploadModal = false"></app-upload-modal>
-
-  <div class="table-section">
+<div class="table-section">
+  <!-- Bouton Télécharger CVs -->
   <div class="cv-actions">
     <app-custom-button
       label="Télécharger CVs"
       (click)="showUploadModal = true">
     </app-custom-button>
   </div>
-  <app-paginated-table
-    *ngIf="!showMultiForm"
-    [data]="cvList"
-    (showCandidat)="voirFiche($event); showMultiForm = true">
-  </app-paginated-table>
 
-  <app-multi-step-form *ngIf="showMultiForm" [fiche]="selectedFicheData"></app-multi-step-form>
+  <!-- Tableau des CVs -->
+<app-paginated-table
+  *ngIf="!showMultiForm"
+  [data]="cvList"
+  (showCandidat)="voirFiche($event); showMultiForm = true">
+</app-paginated-table>
+
+
+
+  <!-- Formulaire multistep -->
+  <app-multi-step-form
+    *ngIf="showMultiForm"
+    [fiche]="selectedFicheData">
+  </app-multi-step-form>
 </div>
+
+
+
