--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,6 +5,6 @@
   <div class="nav-links">
     <button class="nav-link" (click)="goTo('/cv-list')">Les CVs</button>
     <button class="nav-link" (click)="goTo('/fiche-poste')">Fiche de poste</button>
-    <button class="nav-link logout" (click)="goTo('/login')">Se déconnecter</button>
+    <button class="nav-link logout" (click)="logout()">Se déconnecter</button>
   </div>
 </nav>
